app/(notLoggedIn)/page.module.css
.maincontainer {
    display: grid;
    grid-template-rows: 80px 60px auto auto auto auto auto auto 100px;
    grid-template-columns: 1fr 1fr;
    width: 100%;
}

.h1 {
    margin-top: 20px;
    text-align: center;
    grid-row: 2 / 3;
    grid-column: 1 / 3;
    font-size: 60px;
    font-weight: normal;
    text-align: center;
    margin-bottom: -1em;
}

.colorgradient {
    background-image: linear-gradient(to right, var(--secondary), var(--primary), var(--secondary), var(--primary), var(--secondary));
    background-size: 100%;
    background-repeat: repeat;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent; 
    -moz-background-clip: text;
    -moz-text-fill-color: transparent;

    background-clip: text;
}

.contentone {
    margin: 80px auto 40px auto;
    grid-row: 3 / 4;
    grid-column: 1 / 3;
    color: var(--text);
    display: grid;
    grid-template-columns: 1fr 1fr;
    width: 90%;
    column-gap: 50px;
}

.contenttwo {
    margin: 80px auto 40px auto;
    grid-row: 4 / 5;
    grid-column: 1 / 3;
    color: var(--text);
    display: grid;
    grid-template-columns: 1fr 1fr;
    width: 90%;
    column-gap: 50px;
}

.contentonetext {
    grid-column: 1 / 2;
    max-width: 800px;
}

.contenttwotext {
    grid-column: 2 / 3;
    max-width: 800px;
}

.contentoneimage {
    grid-column: 2 / 3;
    border-radius: 15px;
}

.contenttwoimage {
    grid-column: 1 / 2;
    border-radius: 15px;
    display: flex;
    flex-direction: column;
    justify-self: flex-end;
}

.h3 {
    margin-top: 0px;
    font-size: 32px;
    text-align: left;
}

.secondaryunderline {
    text-decoration: underline;
    text-decoration-color: var(--secondary);
}

.primaryunderline {
    text-decoration: underline;
    text-decoration-color: var(--primary);
}

.p {
    font-size: 18px;
    margin-right: 50px;
}

.howitworks {
    grid-column: 1 / 3;
    grid-row: 8 / 9;
    text-align: center;
}

.h2 {
    font-size: 40px;
    color: var(--text);
}

.cardcontainer {
    display: flex;
    align-self: center;
    flex-direction: column;
    align-items: center;
    row-gap: 40px;
    margin-bottom: 20px;
}

.flexrow {
    display: flex;
    flex: 1;
    column-gap: 40px;
}

.comparisoncontainer {
    grid-row: 6 / 7;
    grid-column: 1 / 3;
    margin: 0;
    background-color: var(--primary-variant);
    height: 800px;
    width: 100%;
    display: flex;
    flex-direction: row;
    column-gap: 50px;
    align-items: center;
    justify-content: center;
    position: relative;
}

.curvespacer {
    aspect-ratio: 900/300;
    width: 100%;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    display: flex;
    justify-content: center;
    position: relative;
}

@media (prefers-color-scheme: dark) {
    .layer1 {
        background-image: url("../../public/homepageResources/waves1Dark.svg");
        grid-row: 5 / 6;
        grid-column: 1 / 3;
    }

    .layer2 {
        background-image: url("../../public/homepageResources/waves2Dark.svg");
        grid-row: 7 / 8;
        grid-column: 1 / 3;
    }
}


@media (prefers-color-scheme: light) {
    .layer1 {
        background-image: url("../../public/homepageResources/waves1Light.svg");
        grid-row: 5 / 6;
        grid-column: 1 / 3;
    }

    .layer2 {
        background-image: url("../../public/homepageResources/waves2Light.svg");
        grid-row: 7 / 8;
        grid-column: 1 / 3;
    }
}

